--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,11 @@
-name: Build AAB
+name: Test Build
 
 on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Grant execute permission
-        run: chmod +x gradlew
-
-      - name: Build AAB
-        run: ./gradlew bundleRelease
-
-      - name: Upload AAB
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-release
-          path: app/build/outputs/bundle/release/*.aab
+      - uses: actions/checkout@v4
+      - run: echo "Workflow working"
