--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,38 @@ name: Build AAB
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      # Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
+      # Setup Java 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
+          cache: gradle
 
-      - name: Grant permission
-        run: chmod +x gradlew
+      # Give permission to gradlew
+      - name: Grant execute permission
+        run: chmod +x ./gradlew
 
-      - name: Build AAB
+      # Build Release AAB
+      - name: Build Release AAB
         run: ./gradlew bundleRelease
 
+      # Upload AAB file
       - name: Upload AAB
         uses: actions/upload-artifact@v4
         with:
-          name: app-release
-          path: app/build/outputs/bundle/release/*.aab
+          name: app-release-aab
+          path: app/build/outputs/bundle/release/app-release.aab
